# mira-adultedge

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CONTENT  README.md  SECURITY.md  VISION.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: stats-check.yml  tests.yml
docs/: index.html
eval/: stage_vocabulary.yaml
eval/alpha-test/: A01-willpower-false-positive.txt  A04-neu-healthy-reasoning.txt
examples/: sample_en.txt  sample_ko.txt
mira/: __init__.py  __main__.py  pipeline.py  report.py
mira/calibration/: README.md
mira/contracts/: __init__.py  minimal.py  safety_patterns.py
mira/psr/: __init__.py  psr.py
mira/system_a/: __init__.py  types.py
mira/system_a/coaching/: README.md  __init__.py  coaching.py  coaching_content.yaml  theory_templates.yaml
mira/system_a/engine/: __init__.py  axis_metacognition.py  axis_stage.py  axis_task_definition.py  context_adapter.py  diagnostic_engine.py
mira/system_b/: __init__.py  codex_env.py
mira/system_b/engine/: __init__.py  lane1_cues.py  matcher.py
research/: AE_17pattern_evidence_registry.md  README.md  THEORY.md  axis2-spec.md
research/howstudy/: HS-ogn.md  LICENSE  README.md
skills/mira-coach/: SKILL.md
skills/mira-diagnose-verify/: SKILL.md
skills/mira-report/: SKILL.md
spec/shared/: enums.yaml  invariants.yaml  pattern_registry.yaml
spec/system_b/: false_dilemma.yaml  fluency_illusion.yaml  oversimplified_cause.yaml
tests/: conftest.py  test_alpha_gate_redesign_regression.py  test_contract_invariants.py  test_cue_routing_and_specificity.py  test_dogfooding.py  test_engine_seam.py  test_i18n_output.py  test_json_output.py  test_lane2_prolog_pyswip.py  test_lane_independence.py  test_minimal_loop.py  test_report_fix3.py  test_report_format.py  test_skill_cli_invocation.py  test_skill_coach.py  test_skill_diagnose_verify.py  test_skill_eval.py  test_skill_family_roundtrip.py  test_skill_html_visual.py  test_skill_ingest.py  test_skill_render.py  test_stats.py  test_verdict_state.py
tests/system_a/: test_axis_metacognition.py  test_axis_stage.py  test_axis_task_definition.py  test_coaching.py  test_diagnostic_engine.py
tests/system_b/: test_bridge.py  test_critic_adapter.py  test_feature_schemas.py  test_fidelity_fuzzy.py  test_llm_extractor.py
tools/: stats.py  stats_targets.yaml
(+30 files in other folders)
